# rust-docker-cheatsheet

./: Makefile  README.md
hello-world/: Cargo.toml
hello-world/alpine/: Dockerfile
hello-world/debian/: Dockerfile
hello-world/debian-slim/: Dockerfile
hello-world/distroless-cc/: Dockerfile
hello-world/distroless-static/: Dockerfile
hello-world/scratch-glibc/: Dockerfile
hello-world/scratch-musl/: Dockerfile
webserver/: Cargo.toml
webserver/.cargo/: config
webserver/scratch-glibc/: Dockerfile
webserver/src/: main.rs
