[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0"
hyper = { version = "0.14.23", features = ["full"] }
hyper-rustls = { version = "0.23.1", default-features = false, features = ["http1", "http2", "webpki-tokio"] }
hyper-trust-dns = { version = "0.5.0", features = ["rustls-http2"] }
# reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls"] }
rustls = "0.20.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
